tests/files/flow_controller_tests/should_fail/000.cmdr
//Should fail on divide by 0
x = 1 / 0;